tests/vendor/valid/trivial/null_stmt.c
//expect 0
//tags: trivial
int main() {
    ;
}