tests/vendor/invalid/syntax/missing_type.c
//tags: trivial
main(void) {
    return 0;
}